Fix footer/body margin for xs screen
Hide the footer is too small there isn't enough space to display all the
logos and having a variable height footer doesn't play nicely with the
body margin - I've hidden the footer for the moment when the size is
"xs".

--- a/datavault-webapp/src/main/webapp/resources/theme/css/vault.css
+++ b/datavault-webapp/src/main/webapp/resources/theme/css/vault.css
@@ -150,8 +150,14 @@ margin-bottom: 60px;
     width: 100%;
     height: auto;
     background-color: #f5f5f5;
+    border-top: 1px solid #e4e4e4;
     padding-top: 10px;
     margin-top: 10px;
+}
+
+.footer-img {
+    height: 50px;
+    padding-bottom: 10px;
 }
 
 /* Non sticky footer
